XMLtoCSV/objects/unpackaged/objects/Assessment__c.object
<CustomObject>
    <description>The Assessment object contains a standardized approach to managing assessment criteria for Accounts.</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>The Account is the Account that the Assessment has been created for.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assessments</relationshipLabel>
        <relationshipName>Assessments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CC_Patient_Profiles__c</fullName>
        <description>This is an example Assessment question</description>
        <inlineHelpText>How likely is the KOL to use Patient Profile documents?</inlineHelpText>
        <label>CC Patient Profiles</label>
        <picklist>
            <picklistValues>
                <fullName>Very Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlikely</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CC_Study_Leverage__c</fullName>
        <description>This is an example Assessment question</description>
        <inlineHelpText>How likely is the KOL to leverage Cholecap Study findings during peer discussions?</inlineHelpText>
        <label>CC Study Leverage</label>
        <picklist>
            <picklistValues>
                <fullName>Very Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlikely</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Community_Activity__c</fullName>
        <description>This is an example Assessment question</description>
        <inlineHelpText>How active is this KOL in the local healthcare community?</inlineHelpText>
        <label>Community Activity</label>
        <picklist>
            <picklistValues>
                <fullName>Very Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slightly Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Active</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LN_Patient_Profiles__c</fullName>
        <description>This is an example Assessment question</description>
        <inlineHelpText>How likely is the KOL to use Patient Profile documents?</inlineHelpText>
        <label>LN Patient Profiles</label>
        <picklist>
            <picklistValues>
                <fullName>Very Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlikely</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LN_Study_Leverage__c</fullName>
        <description>This is an example Assessment question</description>
        <inlineHelpText>How likely is the KOL to leverage Labrinone study findings in peer discussions?</inlineHelpText>
        <label>LN Study Leverage</label>
        <picklist>
            <picklistValues>
                <fullName>Very Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlikely</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Oncology_Board__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is an example Assessment question</description>
        <inlineHelpText>Does this physician participate in his local Oncology Board?</inlineHelpText>
        <label>Oncology Board</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Pathologist__c</fullName>
        <description>This is an example Assessment question</description>
        <inlineHelpText>Enter the name of the physician&apos;s preferred pathologist</inlineHelpText>
        <label>Preferred Pathologist</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RL_Patient_Profiles__c</fullName>
        <description>This is an example Assessment question</description>
        <inlineHelpText>How likely is the KOL to leverage Patient Profile documents?</inlineHelpText>
        <label>RL Patient Profiles</label>
        <picklist>
            <picklistValues>
                <fullName>Very Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlikely</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RL_Study_Leverage__c</fullName>
        <description>This is an example Assessment question</description>
        <inlineHelpText>How likely is the KOL to leverage Restolar study findings in peer discussions?</inlineHelpText>
        <label>RL Study Leverage</label>
        <picklist>
            <picklistValues>
                <fullName>Very Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlikely</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Research_Focus__c</fullName>
        <description>This is an example Assessment question</description>
        <inlineHelpText>How willing is the KOL to leverage research?</inlineHelpText>
        <label>Research Focus</label>
        <picklist>
            <picklistValues>
                <fullName>Heavily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slightly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Treatment_Preferences__c</fullName>
        <description>This is an example Assessment question</description>
        <inlineHelpText>What is the doctor&apos;s top preference for treatment?</inlineHelpText>
        <label>Treatment Preferences</label>
        <picklist>
            <picklistValues>
                <fullName>Chemo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemo &amp; Radiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diet/Nutrition/Alternative</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Treatment_Volume__c</fullName>
        <description>This is an example Assessment question</description>
        <inlineHelpText>How many tumors does this physician treat in a year?</inlineHelpText>
        <label>Tumors/Year</label>
        <picklist>
            <picklistValues>
                <fullName>0-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100-150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tumor_Types__c</fullName>
        <description>This is an example Assessment question</description>
        <inlineHelpText>Which t ypes of tumors does this physician specialize in treating?  Please choose max 3</inlineHelpText>
        <label>Tumor Types</label>
        <picklist>
            <picklistValues>
                <fullName>Breast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kidney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stomach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pancreas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prostate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ovary/Uterus/Cervix</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Assessment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{000000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessments</pluralLabel>
    <recordTypes>
        <fullName>KOL</fullName>
        <active>true</active>
        <label>KOL</label>
    </recordTypes>
    <recordTypes>
        <fullName>Oncology</fullName>
        <active>true</active>
        <label>Oncology</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>